# hedwig

./: .gitignore  AGENTS.md  README.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  main.py  runner.py  status.py
backend/app/ingest/: __init__.py  dump.py  imap_source.py  parser.py  source.py
backend/app/llm/: __init__.py  client.py  fake_client.py  protocol.py
backend/app/pipeline/: __init__.py  cluster.py  digest.py  image.py  prompts.py  segment.py  summarize.py
backend/app/rag/: __init__.py  ask.py  chroma_store.py  chunk.py  embed.py  index.py  store.py
backend/app/routes/: __init__.py  chat_routes.py  digest_routes.py
backend/app/storage/: __init__.py  digest_store.py
backend/evals/: README.md  __init__.py  categorize.py  dataset.py  injection.py  prompt_comparison.py  rag.py  run.py  summarize.py  types.py
backend/evals/baselines/: 2026-06-23-live.md  2026-06-23-stubbed.md  2026-06-24-live.md  README.md
backend/evals/fixtures/: golden_qa.json  injection_items.json  injection_questions.json  judge_calibration.json  topic_labels.json  topic_labels.skeleton.json
backend/samples/: 20260602-tikr.eml  20260604-tikr.eml  20260609-alpha-signal.eml  20260609-tikr.eml  20260610-alpha-signal.eml  20260611-alpha-signal.eml  20260612-alpha-signal.eml  20260617-alpha-signal.eml  20260617-superhuman.eml  20260617-tikr.eml  20260618-alpha-signal.eml  20260618-superhuman.eml
backend/scripts/: dump_segmented_stories.py  fetch_imap_smoke.py
backend/tests/: __init__.py  fakes.py  test_cluster.py  test_digest.py  test_digest_store.py  test_image.py  test_llm_client.py  test_local_eml_source.py  test_parser.py  test_runner.py  test_segment.py  test_status.py  test_summarize.py
backend/tests/evals/: __init__.py  test_categorize.py  test_dataset.py  test_injection.py  test_prompt_comparison.py  test_rag.py  test_run.py  (+2 more)
(+82 files in other folders)
