[project]
name = "hedwig"
version = "0.1.0"
description = "Hedwig backend — newsletter ingestion and parsing API"
readme = "README.md"
authors = [
    { name = "David Shi", email = "DavidSnooker@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "fastapi[standard]>=0.136.3",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "ruff>=0.15.17",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
