[project]
name = "hedwig"
version = "0.1.0"
description = "Hedwig backend — newsletter ingestion and parsing API"
readme = "README.md"
authors = [
    { name = "David Shi", email = "DavidSnooker@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "fastapi[standard]>=0.136.3",
    "groq>=1.4.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "readability-lxml>=0.8.4.1",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.0",
    "ruff>=0.15.17",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.13"
strict = true
files = ["app", "tests"]

[[tool.mypy.overrides]]
# The readability-lxml library has no type annotations, so mypy can't see what
# its functions accept or return. Under `strict = true` that normally makes the
# `from readability import ...` line a hard error. This block scopes a single
# relaxation to that one library: treat its types as unknown instead of failing.
# Everything else stays strict.
module = "readability.*"
ignore_missing_imports = true
